--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^8.18.3",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
